--- a/main.ipynb
+++ b/main.ipynb
@@ -16413,7 +16413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -17818,7 +17818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -20063,7 +20063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20072,7 +20072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -20081,7 +20081,7 @@
        "-34.61963157034328"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20092,7 +20092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -20101,7 +20101,7 @@
        "'#ffb600ff'"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20149,337 +20149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>n_victimas</th>\n",
-       "      <th>tipo_de_calle</th>\n",
-       "      <th>calle</th>\n",
-       "      <th>altura</th>\n",
-       "      <th>cruce</th>\n",
-       "      <th>dirección_normalizada</th>\n",
-       "      <th>comuna</th>\n",
-       "      <th>pos_x</th>\n",
-       "      <th>pos_y</th>\n",
-       "      <th>participantes</th>\n",
-       "      <th>victima</th>\n",
-       "      <th>acusado</th>\n",
-       "      <th>fecha_hora</th>\n",
-       "      <th>es_cruce</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ID</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2016-0001</th>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>PIEDRA BUENA AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>FERNANDEZ DE LA CRUZ, F., GRAL. AV.</td>\n",
-       "      <td>PIEDRA BUENA AV. y FERNANDEZ DE LA CRUZ, F., G...</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-58.475340</td>\n",
-       "      <td>-34.687570</td>\n",
-       "      <td>MOTO-AUTO</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>2016-01-01 04:00:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-0002</th>\n",
-       "      <td>1</td>\n",
-       "      <td>GRAL PAZ</td>\n",
-       "      <td>PAZ, GRAL. AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>DE LOS CORRALES AV.</td>\n",
-       "      <td>PAZ, GRAL. AV. y DE LOS CORRALES AV.</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-58.508775</td>\n",
-       "      <td>-34.669777</td>\n",
-       "      <td>AUTO-PASAJEROS</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>PASAJEROS</td>\n",
-       "      <td>2016-01-02 01:15:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-0003</th>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>ENTRE RIOS AV.</td>\n",
-       "      <td>2034</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>ENTRE RIOS AV. 2034</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-58.390403</td>\n",
-       "      <td>-34.631894</td>\n",
-       "      <td>MOTO-AUTO</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>2016-01-03 07:00:00</td>\n",
-       "      <td>Calle</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-0004</th>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>LARRAZABAL AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>VILLEGAS, CONRADO, GRAL.</td>\n",
-       "      <td>LARRAZABAL AV. y VILLEGAS, CONRADO, GRAL.</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-58.465039</td>\n",
-       "      <td>-34.680930</td>\n",
-       "      <td>MOTO-SD</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>SD</td>\n",
-       "      <td>2016-01-10 00:00:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-0005</th>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>SAN JUAN AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>SAENZ PE?A, LUIS, PRES.</td>\n",
-       "      <td>SAN JUAN AV. y SAENZ PEÃ‘A, LUIS, PRES.</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-58.387183</td>\n",
-       "      <td>-34.622466</td>\n",
-       "      <td>MOTO-PASAJEROS</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>PASAJEROS</td>\n",
-       "      <td>2016-01-21 05:20:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-0093</th>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>RIESTRA AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>MOM</td>\n",
-       "      <td>RIESTRA AV. y MOM</td>\n",
-       "      <td>7</td>\n",
-       "      <td>-58.433538</td>\n",
-       "      <td>-34.645616</td>\n",
-       "      <td>MOTO-AUTO</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>2021-12-13 17:10:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-0094</th>\n",
-       "      <td>1</td>\n",
-       "      <td>AUTOPISTA</td>\n",
-       "      <td>DELLEPIANE, LUIS, TTE. GRAL.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>LACARRA AV.</td>\n",
-       "      <td>DELLEPIANE, LUIS, TTE. GRAL. y LACARRA AV.</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-58.467398</td>\n",
-       "      <td>-34.651178</td>\n",
-       "      <td>MOTO-AUTO</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>2021-12-20 01:10:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-0095</th>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>GAONA AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>TERRADA</td>\n",
-       "      <td>GAONA AV. y TERRADA</td>\n",
-       "      <td>11</td>\n",
-       "      <td>-58.472934</td>\n",
-       "      <td>-34.619847</td>\n",
-       "      <td>MOTO-CARGAS</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>CARGAS</td>\n",
-       "      <td>2021-12-30 00:43:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-0096</th>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>PERON, EVA AV.</td>\n",
-       "      <td>4071</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>PERON, EVA AV. 4071</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-58.470668</td>\n",
-       "      <td>-34.650217</td>\n",
-       "      <td>AUTO-CARGAS</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>CARGAS</td>\n",
-       "      <td>2021-12-15 10:30:00</td>\n",
-       "      <td>Calle</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-0097</th>\n",
-       "      <td>1</td>\n",
-       "      <td>CALLE</td>\n",
-       "      <td>PADRE CARLOS MUJICA</td>\n",
-       "      <td>709</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>PADRE CARLOS MUGICA 709</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-58.379762</td>\n",
-       "      <td>-34.586796</td>\n",
-       "      <td>BICICLETA-AUTO</td>\n",
-       "      <td>BICICLETA</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>2021-11-18 06:10:00</td>\n",
-       "      <td>Calle</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>684 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           n_victimas tipo_de_calle                         calle altura  \\\n",
-       "ID                                                                         \n",
-       "2016-0001           1       AVENIDA              PIEDRA BUENA AV.    ESQ   \n",
-       "2016-0002           1      GRAL PAZ                PAZ, GRAL. AV.    ESQ   \n",
-       "2016-0003           1       AVENIDA                ENTRE RIOS AV.   2034   \n",
-       "2016-0004           1       AVENIDA                LARRAZABAL AV.    ESQ   \n",
-       "2016-0005           1       AVENIDA                  SAN JUAN AV.    ESQ   \n",
-       "...               ...           ...                           ...    ...   \n",
-       "2021-0093           1       AVENIDA                   RIESTRA AV.    ESQ   \n",
-       "2021-0094           1     AUTOPISTA  DELLEPIANE, LUIS, TTE. GRAL.    ESQ   \n",
-       "2021-0095           1       AVENIDA                     GAONA AV.    ESQ   \n",
-       "2021-0096           1       AVENIDA                PERON, EVA AV.   4071   \n",
-       "2021-0097           1         CALLE           PADRE CARLOS MUJICA    709   \n",
-       "\n",
-       "                                         cruce  \\\n",
-       "ID                                               \n",
-       "2016-0001  FERNANDEZ DE LA CRUZ, F., GRAL. AV.   \n",
-       "2016-0002                  DE LOS CORRALES AV.   \n",
-       "2016-0003                                   NA   \n",
-       "2016-0004             VILLEGAS, CONRADO, GRAL.   \n",
-       "2016-0005              SAENZ PE?A, LUIS, PRES.   \n",
-       "...                                        ...   \n",
-       "2021-0093                                  MOM   \n",
-       "2021-0094                          LACARRA AV.   \n",
-       "2021-0095                              TERRADA   \n",
-       "2021-0096                                   NA   \n",
-       "2021-0097                                   NA   \n",
-       "\n",
-       "                                       dirección_normalizada comuna  \\\n",
-       "ID                                                                    \n",
-       "2016-0001  PIEDRA BUENA AV. y FERNANDEZ DE LA CRUZ, F., G...      8   \n",
-       "2016-0002               PAZ, GRAL. AV. y DE LOS CORRALES AV.      9   \n",
-       "2016-0003                                ENTRE RIOS AV. 2034      1   \n",
-       "2016-0004          LARRAZABAL AV. y VILLEGAS, CONRADO, GRAL.      8   \n",
-       "2016-0005            SAN JUAN AV. y SAENZ PEÃ‘A, LUIS, PRES.      1   \n",
-       "...                                                      ...    ...   \n",
-       "2021-0093                                  RIESTRA AV. y MOM      7   \n",
-       "2021-0094         DELLEPIANE, LUIS, TTE. GRAL. y LACARRA AV.      9   \n",
-       "2021-0095                                GAONA AV. y TERRADA     11   \n",
-       "2021-0096                                PERON, EVA AV. 4071      9   \n",
-       "2021-0097                            PADRE CARLOS MUGICA 709      1   \n",
-       "\n",
-       "               pos_x      pos_y   participantes    victima    acusado  \\\n",
-       "ID                                                                      \n",
-       "2016-0001 -58.475340 -34.687570       MOTO-AUTO       MOTO       AUTO   \n",
-       "2016-0002 -58.508775 -34.669777  AUTO-PASAJEROS       AUTO  PASAJEROS   \n",
-       "2016-0003 -58.390403 -34.631894       MOTO-AUTO       MOTO       AUTO   \n",
-       "2016-0004 -58.465039 -34.680930         MOTO-SD       MOTO         SD   \n",
-       "2016-0005 -58.387183 -34.622466  MOTO-PASAJEROS       MOTO  PASAJEROS   \n",
-       "...              ...        ...             ...        ...        ...   \n",
-       "2021-0093 -58.433538 -34.645616       MOTO-AUTO       MOTO       AUTO   \n",
-       "2021-0094 -58.467398 -34.651178       MOTO-AUTO       MOTO       AUTO   \n",
-       "2021-0095 -58.472934 -34.619847     MOTO-CARGAS       MOTO     CARGAS   \n",
-       "2021-0096 -58.470668 -34.650217     AUTO-CARGAS       AUTO     CARGAS   \n",
-       "2021-0097 -58.379762 -34.586796  BICICLETA-AUTO  BICICLETA       AUTO   \n",
-       "\n",
-       "                   fecha_hora es_cruce  \n",
-       "ID                                      \n",
-       "2016-0001 2016-01-01 04:00:00  Esquina  \n",
-       "2016-0002 2016-01-02 01:15:00  Esquina  \n",
-       "2016-0003 2016-01-03 07:00:00    Calle  \n",
-       "2016-0004 2016-01-10 00:00:00  Esquina  \n",
-       "2016-0005 2016-01-21 05:20:00  Esquina  \n",
-       "...                       ...      ...  \n",
-       "2021-0093 2021-12-13 17:10:00  Esquina  \n",
-       "2021-0094 2021-12-20 01:10:00  Esquina  \n",
-       "2021-0095 2021-12-30 00:43:00  Esquina  \n",
-       "2021-0096 2021-12-15 10:30:00    Calle  \n",
-       "2021-0097 2021-11-18 06:10:00    Calle  \n",
-       "\n",
-       "[684 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_hm"
+    "import csv\n",
+    "\n",
+    "data_hm.to_csv('data/generated/data_hm.csv', sep=',', quoting=csv.QUOTE_NONNUMERIC)"
    ]
   }
  ],
