--- a/main.ipynb
+++ b/main.ipynb
@@ -20149,13 +20149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "\n",
-    "data_hm.to_csv('data/generated/data_hm.csv', sep=',', quoting=csv.QUOTE_NONNUMERIC)"
+    "data_hm.to_csv('data/generated/data_hm.csv', sep=',', quoting=csv.QUOTE_NONNUMERIC, encoding='utf-8')"
    ]
   }
  ],
