--- a/main.ipynb
+++ b/main.ipynb
@@ -20169,327 +20169,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>n_victimas</th>\n",
-       "      <th>tipo_de_calle</th>\n",
-       "      <th>calle</th>\n",
-       "      <th>altura</th>\n",
-       "      <th>cruce</th>\n",
-       "      <th>dirección_normalizada</th>\n",
-       "      <th>comuna</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>participantes</th>\n",
-       "      <th>victima</th>\n",
-       "      <th>acusado</th>\n",
-       "      <th>fecha_hora</th>\n",
-       "      <th>es_cruce</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2016-0001</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>PIEDRA BUENA AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>FERNANDEZ DE LA CRUZ, F., GRAL. AV.</td>\n",
-       "      <td>PIEDRA BUENA AV. y FERNANDEZ DE LA CRUZ, F., G...</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>-58.475340</td>\n",
-       "      <td>-34.687570</td>\n",
-       "      <td>MOTO-AUTO</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>2016-01-01 04:00:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2016-0002</td>\n",
-       "      <td>1</td>\n",
-       "      <td>GRAL PAZ</td>\n",
-       "      <td>PAZ, GRAL. AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>DE LOS CORRALES AV.</td>\n",
-       "      <td>PAZ, GRAL. AV. y DE LOS CORRALES AV.</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-58.508775</td>\n",
-       "      <td>-34.669777</td>\n",
-       "      <td>AUTO-PASAJEROS</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>PASAJEROS</td>\n",
-       "      <td>2016-01-02 01:15:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016-0003</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>ENTRE RIOS AV.</td>\n",
-       "      <td>2034</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ENTRE RIOS AV. 2034</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-58.390403</td>\n",
-       "      <td>-34.631894</td>\n",
-       "      <td>MOTO-AUTO</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>2016-01-03 07:00:00</td>\n",
-       "      <td>Calle</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2016-0004</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>LARRAZABAL AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>VILLEGAS, CONRADO, GRAL.</td>\n",
-       "      <td>LARRAZABAL AV. y VILLEGAS, CONRADO, GRAL.</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>-58.465039</td>\n",
-       "      <td>-34.680930</td>\n",
-       "      <td>MOTO-SD</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>SD</td>\n",
-       "      <td>2016-01-10 00:00:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2016-0005</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>SAN JUAN AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>SAENZ PE?A, LUIS, PRES.</td>\n",
-       "      <td>SAN JUAN AV. y SAENZ PEÃ‘A, LUIS, PRES.</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-58.387183</td>\n",
-       "      <td>-34.622466</td>\n",
-       "      <td>MOTO-PASAJEROS</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>PASAJEROS</td>\n",
-       "      <td>2016-01-21 05:20:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>679</th>\n",
-       "      <td>2021-0093</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>RIESTRA AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>MOM</td>\n",
-       "      <td>RIESTRA AV. y MOM</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>-58.433538</td>\n",
-       "      <td>-34.645616</td>\n",
-       "      <td>MOTO-AUTO</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>2021-12-13 17:10:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>680</th>\n",
-       "      <td>2021-0094</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AUTOPISTA</td>\n",
-       "      <td>DELLEPIANE, LUIS, TTE. GRAL.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>LACARRA AV.</td>\n",
-       "      <td>DELLEPIANE, LUIS, TTE. GRAL. y LACARRA AV.</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-58.467398</td>\n",
-       "      <td>-34.651178</td>\n",
-       "      <td>MOTO-AUTO</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>2021-12-20 01:10:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>681</th>\n",
-       "      <td>2021-0095</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>GAONA AV.</td>\n",
-       "      <td>ESQ</td>\n",
-       "      <td>TERRADA</td>\n",
-       "      <td>GAONA AV. y TERRADA</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>-58.472934</td>\n",
-       "      <td>-34.619847</td>\n",
-       "      <td>MOTO-CARGAS</td>\n",
-       "      <td>MOTO</td>\n",
-       "      <td>CARGAS</td>\n",
-       "      <td>2021-12-30 00:43:00</td>\n",
-       "      <td>Esquina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>682</th>\n",
-       "      <td>2021-0096</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AVENIDA</td>\n",
-       "      <td>PERON, EVA AV.</td>\n",
-       "      <td>4071</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PERON, EVA AV. 4071</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-58.470668</td>\n",
-       "      <td>-34.650217</td>\n",
-       "      <td>AUTO-CARGAS</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>CARGAS</td>\n",
-       "      <td>2021-12-15 10:30:00</td>\n",
-       "      <td>Calle</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>683</th>\n",
-       "      <td>2021-0097</td>\n",
-       "      <td>1</td>\n",
-       "      <td>CALLE</td>\n",
-       "      <td>PADRE CARLOS MUJICA</td>\n",
-       "      <td>709</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PADRE CARLOS MUGICA 709</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-58.379762</td>\n",
-       "      <td>-34.586796</td>\n",
-       "      <td>BICICLETA-AUTO</td>\n",
-       "      <td>BICICLETA</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>2021-11-18 06:10:00</td>\n",
-       "      <td>Calle</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>684 rows × 15 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            ID  n_victimas tipo_de_calle                         calle altura  \\\n",
-       "0    2016-0001           1       AVENIDA              PIEDRA BUENA AV.    ESQ   \n",
-       "1    2016-0002           1      GRAL PAZ                PAZ, GRAL. AV.    ESQ   \n",
-       "2    2016-0003           1       AVENIDA                ENTRE RIOS AV.   2034   \n",
-       "3    2016-0004           1       AVENIDA                LARRAZABAL AV.    ESQ   \n",
-       "4    2016-0005           1       AVENIDA                  SAN JUAN AV.    ESQ   \n",
-       "..         ...         ...           ...                           ...    ...   \n",
-       "679  2021-0093           1       AVENIDA                   RIESTRA AV.    ESQ   \n",
-       "680  2021-0094           1     AUTOPISTA  DELLEPIANE, LUIS, TTE. GRAL.    ESQ   \n",
-       "681  2021-0095           1       AVENIDA                     GAONA AV.    ESQ   \n",
-       "682  2021-0096           1       AVENIDA                PERON, EVA AV.   4071   \n",
-       "683  2021-0097           1         CALLE           PADRE CARLOS MUJICA    709   \n",
-       "\n",
-       "                                   cruce  \\\n",
-       "0    FERNANDEZ DE LA CRUZ, F., GRAL. AV.   \n",
-       "1                    DE LOS CORRALES AV.   \n",
-       "2                                    NaN   \n",
-       "3               VILLEGAS, CONRADO, GRAL.   \n",
-       "4                SAENZ PE?A, LUIS, PRES.   \n",
-       "..                                   ...   \n",
-       "679                                  MOM   \n",
-       "680                          LACARRA AV.   \n",
-       "681                              TERRADA   \n",
-       "682                                  NaN   \n",
-       "683                                  NaN   \n",
-       "\n",
-       "                                 dirección_normalizada  comuna        lon  \\\n",
-       "0    PIEDRA BUENA AV. y FERNANDEZ DE LA CRUZ, F., G...     8.0 -58.475340   \n",
-       "1                 PAZ, GRAL. AV. y DE LOS CORRALES AV.     9.0 -58.508775   \n",
-       "2                                  ENTRE RIOS AV. 2034     1.0 -58.390403   \n",
-       "3            LARRAZABAL AV. y VILLEGAS, CONRADO, GRAL.     8.0 -58.465039   \n",
-       "4              SAN JUAN AV. y SAENZ PEÃ‘A, LUIS, PRES.     1.0 -58.387183   \n",
-       "..                                                 ...     ...        ...   \n",
-       "679                                  RIESTRA AV. y MOM     7.0 -58.433538   \n",
-       "680         DELLEPIANE, LUIS, TTE. GRAL. y LACARRA AV.     9.0 -58.467398   \n",
-       "681                                GAONA AV. y TERRADA    11.0 -58.472934   \n",
-       "682                                PERON, EVA AV. 4071     9.0 -58.470668   \n",
-       "683                            PADRE CARLOS MUGICA 709     1.0 -58.379762   \n",
-       "\n",
-       "           lat   participantes    victima    acusado           fecha_hora  \\\n",
-       "0   -34.687570       MOTO-AUTO       MOTO       AUTO  2016-01-01 04:00:00   \n",
-       "1   -34.669777  AUTO-PASAJEROS       AUTO  PASAJEROS  2016-01-02 01:15:00   \n",
-       "2   -34.631894       MOTO-AUTO       MOTO       AUTO  2016-01-03 07:00:00   \n",
-       "3   -34.680930         MOTO-SD       MOTO         SD  2016-01-10 00:00:00   \n",
-       "4   -34.622466  MOTO-PASAJEROS       MOTO  PASAJEROS  2016-01-21 05:20:00   \n",
-       "..         ...             ...        ...        ...                  ...   \n",
-       "679 -34.645616       MOTO-AUTO       MOTO       AUTO  2021-12-13 17:10:00   \n",
-       "680 -34.651178       MOTO-AUTO       MOTO       AUTO  2021-12-20 01:10:00   \n",
-       "681 -34.619847     MOTO-CARGAS       MOTO     CARGAS  2021-12-30 00:43:00   \n",
-       "682 -34.650217     AUTO-CARGAS       AUTO     CARGAS  2021-12-15 10:30:00   \n",
-       "683 -34.586796  BICICLETA-AUTO  BICICLETA       AUTO  2021-11-18 06:10:00   \n",
-       "\n",
-       "    es_cruce  \n",
-       "0    Esquina  \n",
-       "1    Esquina  \n",
-       "2      Calle  \n",
-       "3    Esquina  \n",
-       "4    Esquina  \n",
-       "..       ...  \n",
-       "679  Esquina  \n",
-       "680  Esquina  \n",
-       "681  Esquina  \n",
-       "682    Calle  \n",
-       "683    Calle  \n",
-       "\n",
-       "[684 rows x 15 columns]"
+       "ID                                                 2016-0175\n",
+       "n_victimas                                                 1\n",
+       "tipo_de_calle                                          CALLE\n",
+       "calle                                 FALCON, RAMON L.,CNEL.\n",
+       "altura                                                   ESQ\n",
+       "cruce                                             MEMBRILLAR\n",
+       "dirección_normalizada    FALCON, RAMON L.,CNEL. y MEMBRILLAR\n",
+       "comuna                                                   7.0\n",
+       "lon                                               -58.460642\n",
+       "lat                                               -34.629605\n",
+       "participantes                               PEATON-BICICLETA\n",
+       "victima                                               PEATON\n",
+       "acusado                                            BICICLETA\n",
+       "fecha_hora                               2016-12-27 08:15:00\n",
+       "es_cruce                                             Esquina\n",
+       "Name: 136, dtype: object"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data.iloc[136]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_hm.to_excel('data/generated/data_hm.xlsx', engine='openpyxl')"
    ]
   }
  ],
