--- a/main.ipynb
+++ b/main.ipynb
@@ -20210,6 +20210,152 @@
    "source": [
     "data_hm.to_excel('data/generated/data_hm.xlsx', engine='openpyxl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2012-04-30</th>\n",
+       "      <td>1.008902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-05-31</th>\n",
+       "      <td>-1.772528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-06-30</th>\n",
+       "      <td>0.758260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-31</th>\n",
+       "      <td>-0.644336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-08-31</th>\n",
+       "      <td>0.533748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-09-30</th>\n",
+       "      <td>1.363651</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   0\n",
+       "2012-04-30  1.008902\n",
+       "2012-05-31 -1.772528\n",
+       "2012-06-30  0.758260\n",
+       "2012-07-31 -0.644336\n",
+       "2012-08-31  0.533748\n",
+       "2012-09-30  1.363651"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index = pd.date_range('4/1/2012','9/30/2012', freq='M')\n",
+    "df = pd.DataFrame(np.random.randn(len(index),1), index=index)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2012-04-30</th>\n",
+       "      <td>1.008902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-06-30</th>\n",
+       "      <td>-1.014268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-08-31</th>\n",
+       "      <td>-0.110587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-10-31</th>\n",
+       "      <td>1.363651</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   0\n",
+       "2012-04-30  1.008902\n",
+       "2012-06-30 -1.014268\n",
+       "2012-08-31 -0.110587\n",
+       "2012-10-31  1.363651"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.resample('2M').sum()"
+   ]
   }
  ],
  "metadata": {
