--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -9690,6 +9690,51 @@
     "# Now you can use the engine to interact with your database\n",
     "data_hm.to_sql(name=table_name, con=engine, if_exists='append', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import folium\n",
+    "from branca.colormap import LinearColormap\n",
+    "\n",
+    "# Assuming data contains latitude, longitude, and the value you want to use for color\n",
+    "# Replace 'value_column' with the actual name of the column in your DataFrame\n",
+    "value_column = 'comuna'\n",
+    "\n",
+    "data_hm[value_column] = pd.to_numeric(data_hm[value_column], errors='coerce')\n",
+    "\n",
+    "data_hm = data_hm.dropna()\n",
+    "data_hm = data_hm.rename({'pos_x': 'lon',  'pos_y': 'lat'}, axis=1)\n",
+    "\n",
+    "# Define the minimum and maximum values for the color scale\n",
+    "min_value = data_hm[value_column].astype(float).min()\n",
+    "max_value = data_hm[value_column].astype(float).max()\n",
+    "\n",
+    "# Create a color gradient\n",
+    "colormap = LinearColormap(['blue', 'yellow', 'red'], vmin=min_value, vmax=max_value)\n",
+    "\n",
+    "# Create a Folium Map\n",
+    "mapa = folium.Map()\n",
+    "\n",
+    "# Iterate over DataFrame rows\n",
+    "for i, row in data_hm.iterrows():\n",
+    "    # Get latitude, longitude, and value\n",
+    "    lat = row['lat']\n",
+    "    lon = row['lon']\n",
+    "    value = row[value_column]\n",
+    "    \n",
+    "    # Get marker color based on the value\n",
+    "    color = colormap(value)\n",
+    "    \n",
+    "    # Create marker with the specified color\n",
+    "    folium.Marker(location=(lat, lon), icon=folium.Icon(color=color)).add_to(mapa)\n",
+    "\n",
+    "# Display the map\n",
+    "# map"
+   ]
   }
  ],
  "metadata": {
