--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -9688,7 +9688,7 @@
     "table_name = \"data_hm\"\n",
     "\n",
     "# Now you can use the engine to interact with your database\n",
-    "data_hm.to_sql(name=table_name, con=engine, if_exists='append', index=False)"
+    "data_hm.to_sql(name=table_name, con=engine, if_exists='replace', index=False)"
    ]
   },
   {
