--- a/main.ipynb
+++ b/main.ipynb
@@ -35,9 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLa ejecución de celdas con 'Python -1.-1.-1' requiere el paquete ipykernel.\n",
+      "\u001b[1;31mEjecute el siguiente comando para instalar 'ipykernel' en el entorno de Python. comando \n",
+      "\u001b[1;31m: 'g:/cursos_2023/HENRY/DATA07/PI/pida-javier-bengolea/.venv/Scripts/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "def showPie(columna, excluir=[\"SD\"], max=15):\n",
     "  for substring in excluir:\n",
@@ -18555,7 +18566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
